--- a/blog/templates/blog_category.html
+++ b/blog/templates/blog_category.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block page_content %}
+{% extends "base.html" %}
+{% block title %}Blog - {{category}}{% endblock %}
+{% block page_content %}
 <div class="col-md-8 offset-md-2">
   <h1>{{ category | title }}</h1>
   <hr />
