--- a/blog/templates/blog_index.html
+++ b/blog/templates/blog_index.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block page_content %}
+{% extends "base.html" %}
+{% block title %}Blog{% endblock %}
+{% block page_content %}
 <div class="col-md-8 offset-md-2">
   <h1>Blog Index</h1>
   <hr />
