--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block page_content %}
+{% extends "base.html" %}
+{% block title %}{{post.title}}{% endblock %}
+{% block page_content %}
 <div class="col-md-8 offset-md-2">
   <h1>{{ post.title }}</h1>
   <small>
