--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %} {% load static %} {% block page_content %}
+{% extends "base.html" %}
+{% load static %}
+{% block title %}{{project.title}}{% endblock %}
+{% block page_content %}
 <h1>{{ project.title }}</h1>
 <div class="row">
   <div class="col-md-8">
