--- a/projects/templates/project_index.html
+++ b/projects/templates/project_index.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %} {% load static %} {% block page_content %}
+{% extends "base.html" %}
+{% load static %}
+{% block title %}Projects{% endblock %}
+{% block page_content %}
 <h1>Projects</h1>
 <div class="row">
   {% for project in projects %}
